[package]
name = "english-numbers"
version = "0.3.2"
authors = ["Matthew Maclean"]
description = "Convert integers to enlish number format"
keywords = ["english", "number", "convert", "format"]
license = "MIT"
license-file = "LICENCE"
readme = "README.md"
repository = "https://github.com/Matthew-Maclean/english-numbers"
documentation = "https://docs.rs/english-numbers"